# avifauna

./: .gitignore  README.md  package-lock.json  package.json
.claude/: settings.local.json
.github/workflows/: deploy-api.yml  deploy-web.yml
apps/api/: .env.example  Dockerfile  Makefile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 07114d0d86da_initial_tables.py  19c91a8aeb8d_add_user_auth_fields.py
apps/api/src/: auth.py  config.py  database.py  main.py  models.py  orm_models.py  storage.py
apps/api/src/routers/: auth.py  identify.py  sightings.py  species.py
apps/web/: .env.local.example  Dockerfile  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
apps/web/public/: manifest.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/dashboard/: page.tsx
apps/web/src/app/explore/: page.tsx
apps/web/src/app/identify/: page.tsx
apps/web/src/app/login/: page.tsx
apps/web/src/app/map/: page.tsx
apps/web/src/app/offline/: page.tsx
apps/web/src/app/profile/: page.tsx
apps/web/src/app/register/: page.tsx
apps/web/src/app/reset-password/: page.tsx
apps/web/src/app/sightings/: page.tsx
apps/web/src/components/auth/: GoogleSignInButton.tsx
apps/web/src/components/identify/: IdentificationResult.tsx  PhotoUploader.tsx
apps/web/src/components/layout/: BottomNav.tsx  OfflineBanner.tsx  Providers.tsx
apps/web/src/components/map/: SightingsMap.tsx
apps/web/src/lib/: api.ts  auth.tsx  db.ts  exportCsv.ts  geolocation.ts  useAutoSync.ts
(+2 files in other folders)
